[dev] added get endpoint to notifiche conferme richieste allocazione, FE integration for notifiche conferma allocazione, UI notification page for utenti comunali
