# SecuriTrento_FE/src/app/models/notificaConfermaRichiestaAllocazione.model.ts
@@ -1,0 +1,7 @@
+export interface NotificaConfermaRichiestaAllocazione {
+    _id?: string;
+    timeStamp: Date;
+    utenteCompleto: string;
+    RichiestaAllocazioneId: string;
+    UtenteDestinatarioId: string;
+}
